chore: update Cargo.toml

--- a/programs/whirlpool/Cargo.toml
+++ b/programs/whirlpool/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "whirlpool-cpi"
+name = "whirlpool"
 version = "0.1.0"
 description = "CPI Adapter for Orca Whirlpool"
 edition = "2021"
@@ -7,7 +7,7 @@ keywords = ["solana", "anchor", "raydium"]
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "whirlpool_cpi"
+name = "whirlpool"
 
 [features]
 default = ["cpi"]
